# interface

./: .gitignore  Cargo.toml  package.json  webpack.config.js
app/: Cargo.toml  bootstrap.js
app/src/: app.rs
app/src/agents/: video_upstream.rs
src/: app.rs
src/agents/: camera_manager.rs  media_manager.rs  mod.rs  video_upstream.rs
static/: index.html
webworker/: Cargo.toml  worker.js
webworker/src/: lib.rs
webworker/src/agents/: mod.rs  private_test.rs
