[package]
name = "webworker"
version = "0.1.0"
authors = ["Michał Kawalec <michal@monad.cat>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
futures = { version = "0.3.4", features = ["executor", "thread-pool"] }
yew = { path = "../../../yewstack/yew/yew" }
yewtil = { path = "../../../yewstack/yew/yewtil" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
js-sys = { version = "0.3.40" }
wee_alloc = "0.4.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Navigator",
  "MediaDevices",
  "MediaStreamConstraints",
  "MediaTrackSupportedConstraints"
]
